# keep-event-handler

./: .dockerignore  .gitignore  Dockerfile  README.md  check_kafka.py  consumer_main.py  docker-compose.infra.yml  logging.py  logging_conf.py  logging_utils.py  main.py  pyproject.toml
.github/workflows/: test-pr-e2e.yml
alert_deduplicator/: alert_deduplicator.py  deduplication_rules_provisioning.py
api/routes/v1/: health.py  metrics.py
bl/: enrichments_bl.py  incidents_bl.py  maintenance_windoes_bl.py  maintenance_windows_bl.py
config/: .env  config.py  consts.py
contextmanager/: contextmanager.py
controllers/: event_controller.py
core/: bootstrap.py  db.py  db_utils.py  dependencies.py  elastic.py  incidents.py  init.py  kafka_consumer.py  lifespan.py  metrics.py  redis_consumer.py  redis_worker.py  sse.py  tenant_configuration.py
core/cel_to_sql/: cel_ast_converter.py  properties_mapper.py  properties_metadata.py
core/cel_to_sql/sql_providers/: base.py  get_cel_to_sql_provider_for_dialect.py  mysql.py  postgresql.py  sqlite.py
core/db/: db.py  db_on_start.py  db_utils.py  helpers.py
event_management/: notification_cache.py  process_event_task.py
event_managment/: process_event_task.py
event_subscriber/: event_subscriber.py
functions/: __init__.py
identitymanager/: authverifierbase.py  identitymanager.py  identitymanagerfactory.py
models/: alert.py  event_dto.py  incident.py  provider.py  query.py  roles.py
models/db/: alert.py  enrichment_event.py  extraction.py  incident.py  maintenance_window.py  mapping.py  preset.py  rule.py  user.py
parser/: parser.py
providers/: providers_factory.py  providers_service.py
providers/base/: base_provider.py
rulesengine/: rulesengine.py
secretmanager/: kubernetessecretmanager.py  secretmanager.py  secretmanagerfactory.py
tests/: conftest.py  test_counting_integration.py  test_enrichments.py  test_functions.py  test_incidents.py  test_kafka_consumer_mock.py  test_maintenance_windows_bl.py  test_metrics.py  test_rules_engine.py
tests/fixtures/: client.py
utils/: cel_utils.py  enrichment_helpers.py  pagination.py  tenant_utils.py
